--- a/pages/stylesheet.css
+++ b/pages/stylesheet.css
@@ -1,1 +1,11 @@
+body {
+  text-align: center;
+  background-color: RGB(60,60,60);
+  color: RGB(200,200,200);
+  font-family: "Times New Roman";
+  font-size: 20px;
+}  
 
+h1 {
+ color: 102,204,255; 
+}
