Fix main & style
Main pages bad linkign undone.
Stylesheet now actually centeres stuff.

--- a/pages/stylesheet.css
+++ b/pages/stylesheet.css
@@ -1,5 +1,8 @@
+* {
+	margin: auto;
+}
+
 body {
-  align: center;
   text-align: center;
   background-color: RGB(60,60,60);
   color: RGB(200,200,200);
