--- a/pages/stylesheet.css
+++ b/pages/stylesheet.css
@@ -30,9 +30,11 @@ a:active {
 }
 
 img.parallaxbg {
+	image-rendering: pixelated;
 	position: absolute;
 }
 img.parallaxlayer { 
+	image-rendering: pixelated;
 	position: relative;
 }
 
