Parallax demo working.
demo working.

--- a/pages/stylesheet.css
+++ b/pages/stylesheet.css
@@ -35,7 +35,7 @@ img.parallaxbg {
 }
 img.parallaxlayer { 
 	image-rendering: pixelated;
-	position: relative;
+	position: absolute;
 }
 
 img.greyscale {
