more examples for parallax

--- a/pages/stylesheet.css
+++ b/pages/stylesheet.css
@@ -29,6 +29,11 @@ a:hover {
 a:active {  
 }
 
+img.pixel {
+	image-rendering: pixelated;
+	position: absolute;
+}
+
 img.greyscale {
  -webkit-filter: grayscale(100%);
 }
